@@ -22,4 +22,4 @@ libdiff_a_SOURCES = diff.c diff3.c analyze.c cmpbuf.c cmpbuf.h io.c \
         side.c system.h diffrun.h
 
 EXTRA_DIST = ChangeLog build_diff.com diagmeet.note \
-	libdiff.dep libdiff.dsp libdiff.mak
+	libdiff.dep libdiff.dsp libdiff.mak .cvsignore
