@@ -1,3 +1,7 @@
+2005-09-04  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (EXTRA_DIST): Add .cvsignore.
+
 2005-04-08  Derek Price  <derek@ximbiot.com>
 
 	* .cvsignore: Add stamp-ch.
