@@ -1,3 +1,7 @@
+2005-09-04  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (EXTRA_DIST): Add .cvsignore.
+
 2004-11-05  Conrad T. Pino  <Conrad@Pino.com>
 
 	* libdiff.dep: Regenerated after complete rebuild.
